<resources>
    <string name="app_name">Visitor Management System</string>
    <string name="viewVisitorInfo">View visitor information</string>
    <string name="viewSummary">View summary</string>
    <string name="evacuation_report">Evacuation report</string>
    <string name="manageVisitor">Manage Visitors</string>
    <string name="evacuationReport">Evacuation Report</string>
    <string name="userInformation">User Information</string>
    <string name="visitorInformation">Visitor Information</string>
    <string name="scan">Scan QR Code</string>
    <string name="manually">Manually</string>
    <string name="next">Next</string>
    <string name="role">Role:</string>
    <string name="fullname">Full Name:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="add">Add</string>
    <string name="icNumber">IC Number:</string>
    <string name="arrivedBy">Arrived By:</string>
    <string name="license">License Plate Number:</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="address">Address:</string>
    <string name="mobileNumber">Mobile Number:</string>
    <string name="mobileNum">Mobile Number:</string>
    <string-array name="roles">
        <item>All</item>
        <item>Administrator</item>
        <item>Manager</item>
        <item>Security Guard</item>
        <item>Host</item>
    </string-array>
    <string-array name="transport">
        <item>Foot</item>
        <item>Car</item>
    </string-array>
    <string-array name="spnOptions">
        <item>Date</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>


</resources>
