<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a15031777.visitormanagementsystem.ManagerMainPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonViewVisitorInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewVisitorInfo" />

        <Button
            android:id="@+id/buttonViewSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewSummary" />

        <Button
            android:id="@+id/buttonReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evacuation_report" />
    </LinearLayout>

</LinearLayout>
