<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a15031777.visitormanagementsystem.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/imageButton"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:contentDescription=""
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButton"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/imageButton"
                android:layout_toRightOf="@+id/imageButton"
                android:text="Sign In" />


            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageButton"
                android:layout_alignStart="@+id/imageButton"
                android:layout_below="@+id/imageButton"
                android:layout_marginTop="25dp"
                android:text="@string/icNumber" />

            <EditText
                android:id="@+id/editTextIC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView25"
                android:layout_alignStart="@+id/textView25"
                android:layout_below="@+id/textView25"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextIC"
                android:layout_alignStart="@+id/editTextIC"
                android:layout_below="@+id/editTextIC"
                android:layout_marginTop="25dp"
                android:text="@string/arrivedBy" />

            <Spinner
                android:id="@+id/spinnerTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView26"
                android:layout_alignStart="@+id/textView26"
                android:layout_below="@+id/textView26" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextIC"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/editTextIC"
                android:layout_below="@+id/spinnerTrans"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/next" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
